# ChangeLog for dev-java/java-config
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/java-config/ChangeLog,v 1.268 2012/05/10 18:33:56 aballier Exp $

  10 May 2012; Alexis Ballier <aballier@gentoo.org>
  java-config-2.1.11-r3.ebuild:
  keyword ~amd64-fbsd

  10 May 2012; Ralph Sennhauser <sera@gentoo.org> java-config-2.1.11-r3.ebuild:
  Backport missing jdk-defaults.conf for arm #305773 and amd64-fbsd #415397

  15 Apr 2012; Mike Frysinger <vapier@gentoo.org> java-config-2.1.11-r3.ebuild:
  Add back ia64 love #349020 by Dennis Schridde.

  04 Jan 2012; Ralph Sennhauser <sera@gentoo.org> Manifest:
  Drop ia64 support #345433

  04 Jan 2012; Ralph Sennhauser <sera@gentoo.org> java-config-2.1.10.ebuild,
  java-config-2.1.11.ebuild, java-config-2.1.11-r1.ebuild,
  java-config-2.1.11-r2.ebuild, java-config-2.1.11-r3.ebuild:
  Drop ia64 support #345433

  28 Mar 2011; Samuli Suominen <ssuominen@gentoo.org>
  java-config-2.1.11-r3.ebuild:
  Don't install deprecated x-java-jnlp-file.desktop to /usr/share/mimelnk wrt
  #350459. Signed off by Alistair Bush.

  25 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org>
  java-config-2.1.11-r3.ebuild:
  ppc64 stable wrt #351486

  23 Jan 2011; Raúl Porcel <armin76@gentoo.org> java-config-2.1.10.ebuild,
  java-config-2.1.11.ebuild:
  Drop alpha keywords

  22 Jan 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  java-config-2.1.11-r3.ebuild:
  x86 stable wrt bug #351486

  13 Jan 2011; Brent Baude <ranger@gentoo.org> java-config-2.1.11-r3.ebuild:
  stable ppc, bug 351486

  13 Jan 2011; Markos Chandras <hwoarang@gentoo.org>
  java-config-2.1.11-r3.ebuild:
  Stable on amd64 wrt bug #351486

*java-config-2.1.11-r3 (13 Dec 2010)

  13 Dec 2010; Alistair Bush <ali_bush@gentoo.org>
  +java-config-2.1.11-r3.ebuild, +files/python-abi-support.patch:
  Add special handling of Python-specific variables for support for Jython.
  #348306.
