@@ -14,15 +14,17 @@ AUX java-config-2.1.9-prefix.patch 13052 RMD160 2484524363f253ccb2decef1051bdc1c
 AUX java-config-2.1.9.patch 1630 RMD160 2b41d8bf1146b3d986e7161dee652a3471b5a556 SHA1 d21906d76fa8c67fd9519056dca78d962510be74 SHA256 df1f0d7320826adfaeec10edf6880621aaee1839e7e8f53f8fc3654576398bbb
 AUX python-abi-support.patch 1558 RMD160 cd73b97cfaed4071ba020fd4c647a713484dbf86 SHA1 b0068c5b9b4bb97c05b8911f86d7cb5a08122a13 SHA256 790b68ae41fa48587bbf29ae8e8466305b8f29d4d122d3a6551cf9a627d6163b
 DIST java-config-2.1.11.tar.bz2 60763 RMD160 35f62025fe9843769fe164d9bb50419fd2fc7e34 SHA1 df62f76957343108d1b27687132958853434982c SHA256 ffc90aac716f6edc2f99f70e4947eab606e3a70dadb90328dedda16345796bbe
+DIST java-config-2.1.12.tar.bz2 48925 RMD160 76347001674bea74fc561869b8c8974472fe783b SHA1 6482bf7f1f9c5bcb121f651a3ddc9ef44a1bb840 SHA256 2bace29c276a9507260df505d27bdb9eeaac79e46a8ba615496ae91072b35460
 EBUILD java-config-2.1.11-r2.ebuild 2048 RMD160 2dda5ad85f5ae8eb850914ddba54b2aa72d528b0 SHA1 6fae089b41999ade6dbbdf1e6fde172ab150ba1a SHA256 8b7eceab96f193572506a04d02397122a2e75f4c1ef6781ee4659cddc46fa9b2
 EBUILD java-config-2.1.11-r3.ebuild 2313 RMD160 e7ca6e5bdf034f763b783ce3033823bba07ef7cf SHA1 9a43b7566391ee903a5e8a8d3cf2b103cf35a214 SHA256 0d04112d2f7cb69179f685e03e29641b740e671196607e06955534d1ff7e2780
 EBUILD java-config-2.1.11.ebuild 1841 RMD160 3c80e2e84b1e337077b5a27a3ee5cdd4ba460b3e SHA1 445bf2cf9c1ed751895682dce06077a412dd0d3c SHA256 d879c58aaed4d66059fb3a6acd34760d9f3c4be49a10fb22968d0e6656db9fdc
-MISC ChangeLog 45506 RMD160 309989c0ddffafeb227ca3eb83be46ccf300e428 SHA1 017f078c7f7d75894b348c08e3734537806380b8 SHA256 07c49f2ef25ab004bd73185833146ed940cc43506dbcb020b2b841217669704a
+EBUILD java-config-2.1.12.ebuild 2335 RMD160 079fce8e32623fb5bd9da7610c0b643d72fdc1af SHA1 98ee4b175e34fccadb0d07fe866e3fca4254fa54 SHA256 e6e03fd9c8dfe801b5e9e2e77fa5739d48ef8e6773151b7b831ba79beecd39ea
+MISC ChangeLog 45637 RMD160 05b3d965ecf41aaf209940fac263d35c74d750b2 SHA1 45d952864167b10ecba92e9bc161ec6a586c6130 SHA256 2c7bf279103c23ff4db94f4a962b7e3ad1d9094ffa3f78d4ee6838044e592ed0
 MISC metadata.xml 482 RMD160 b060f8a2492170d8513e1b2d03512d8b565b5045 SHA1 b154d3e425be12942f183a7ad1a37fecc215e4b4 SHA256 f80d3cd5afabd0dc4d177925c3715c464288e5ec3ed1ca809a7f7a66ee3907a5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk+2icEACgkQX3X2B8XHTolzUQCfexLewN+Lyc2B8hnf54evfUvm
-1G4AniHdR3lACOgME6nQsJ3HwOpwaRy9
-=OLGW
+iEYEARECAAYFAk/XmfAACgkQX3X2B8XHTokLKACeJpXeZfchMlimIcjFgFZGpVPr
+wZ0AnjAKGV0x9V495D+zP07Pj6+HKJAg
+=45SA
 -----END PGP SIGNATURE-----
